--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,11 @@
     url(../img/pageHeaders/safari-zoo.jpg) center center no-repeat;
   background-size: cover;
 }
+.submarins-page-header {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url(../img/Sectores/Submarines/submarins.jpg) center center no-repeat;
+  background-size: cover;
+}
 
 .sector-feature:hover {
   transition: box-shadow 0.2s ease-in-out;
